NEW - bug 225025: Sybase 15.x  and 12.x Other Driver has no UI https://bugs.eclipse.org/bugs/show_bug.cgi?id=225025 NEW - bug 225014: Bundle version ranges missing for many Sybase enablement plug-ins https://bugs.eclipse.org/bugs/show_bug.cgi?id=225014 as well as bug 225024 and bug 225019

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
@@ -194,5 +194,21 @@
             id="org.eclipse.datatools.enablement.sybase.asa.ui.connection.drivers.ASA10DriverUIContributor">
       </driverUIContributor>
    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+       <driverUIContributor
+             class="org.eclipse.datatools.enablement.sybase.asa.ui.ASAOtherDriverUIContributor"
+             driverTemplateID="org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate"
+             id="org.eclipse.datatools.enablement.sybase.asa.9_x.other.ASAOtherDriverUIContributor">
+       </driverUIContributor>
+    </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+       <driverUIContributor
+             class="org.eclipse.datatools.enablement.sybase.asa.ui.ASAOtherDriverUIContributor"
+             driverTemplateID="org.eclipse.datatools.enablement.sybase.asa.10_x.other.driverTemplate"
+             id="org.eclipse.datatools.enablement.sybase.asa.10_x.other.ASAOtherDriverUIContributor">
+       </driverUIContributor>
+    </extension>
  
 </plugin>
