[132958] Applied the Ecore ODA Patch 1 (95129) described in comment #13

--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
@@ -42,7 +42,7 @@
             initialPageId="org.eclipse.datatools.enablement.oda.ecore.dataSet.page1"
             id="org.eclipse.datatools.enablement.oda.ecore.dataSet">
          <dataSetWizard
-               class="org.eclipse.datatools.enablement.oda.ecore.ui.impl.DataSetWizard"
+               class="org.eclipse.datatools.connectivity.oda.design.ui.wizards.DataSetWizard"
                windowTitle="%wizard.data.set.window.title">
          </dataSetWizard>
          <dataSetPage
