--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -31,6 +31,11 @@
             provider="org.eclipse.datatools.connectivity.sqm.internal.core.containment.SchemaContainmentProvider">
       </containment>
       <containment
+            package="http:///org/eclipse/datatools/modelbase/sql/schema.ecore"
+            class="Comment"
+            provider="org.eclipse.datatools.connectivity.sqm.internal.core.containment.CommentContainmentProvider">
+      </containment>
+      <containment
             package="http:///org/eclipse/datatools/modelbase/sql/tables.ecore"
             class="BaseTable"
             provider="org.eclipse.datatools.connectivity.sqm.internal.core.containment.TableContainmentProvider">
