Update build scripts

--- a/plugins/org.eclipse.datatools.releng.builder/build.properties
+++ b/plugins/org.eclipse.datatools.releng.builder/build.properties
@@ -42,7 +42,7 @@ javacVerbose=true
 
 buildDirectory=/home/adb/releng.dtp/src
 
-postingDirectory=/home/adb/releng.dtp/dtp.output/1.6
+postingDirectory=/home/adb/releng.dtp/output
 
 baseLocation=/home/adb/releng.dtp/baseLocation
 
@@ -53,10 +53,3 @@ eclipse.pdebuild.templates=/home/adb/releng.dtp/src/org.eclipse.releng.basebuild
 eclipse.pdebuild.home=/home/adb/releng.dtp/org.eclipse.releng.basebuilder
 
 
-#####################################
-#  DTP download setting             #
-#####################################
-
-#file-prefix=dtp-sdk_1.6M5_
-#file-suffix=0.7.0.200602241
-#file-version=dtp-sdk_1.6M4d
