BZ225651 - Committing new usability changes to the main codeline

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -34,6 +34,7 @@ IntroductionWizardPage.intro = This wizard walks through the steps to create a c
 CPWizardSelectionPage.title = Connection Profile
 CPWizardSelectionPage.desc = Select a connection profile type.
 CPWizardSelectionPage.group = &Connection Profile Types:
+CPWizardSelectionPage.defaultName =New {0}
 actions.connect.job = Connect server job
 actions.connect.uijob = Refreshing View
 actions.ping.job = Ping server job
@@ -70,7 +71,8 @@ NewConnectionProfileWizardPage.summary_cp_name = Name
 NewConnectionProfileWizardPage.summary_cp_desc = Description
 NewConnectionProfileWizardPage.Button.AutoConnect = &Auto-connect at startup
 NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect at startup.
-NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
+NewConnectionProfileWizardPage.summary_autoconnect = Auto connect at startup
+NewConnectionProfileWizardPage.summary_autoconnect_on_finish = Auto connect on finish
 NewConnectionProfileWizardPage.localRepository = Create in workspace repository (local)
 NewConnectionProfileWizardPage.chooseRepository = Choose repository:
 ConnectionProfileDetailsPage.Button.TestConnection = &Test Connection
@@ -130,7 +132,7 @@ PropertyDescriptor.error.msg = Error encountered while processing properties for
 PasswordTextPropertyDescriptor.property.label = Password
 DriverClassBrowsePropertyDescriptor.property.label = Driver Class
 DriverClassBrowsePropertyDescriptor.jardialog.title = Available Classes from Jar List
-DriverClassBrowsePropertyDescriptor.jardialog.msg = Select one of the available classes.
+DriverClassBrowsePropertyDescriptor.jardialog.msg = Provide the name of the driver class or select a class from the available jars.
 DriverClassBrowsePropertyDescriptor.noclasses.title = No Available Driver Classes
 DriverClassBrowsePropertyDescriptor.noclasses.msg = There are no driver classes available for the current jar list.
 
