--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries/plugin.xml
@@ -94,7 +94,7 @@
             createDefault="false"
             emptyJarListIsOK="false"
             id="org.eclipse.datatools.enablement.ibm.db2.iseries.driverTemplate"
-            jarList="C:\Program Files\IBM\SQLLIB\java\db2jcc.jar,C:\Program Files\IBM\SQLLIB\java\db2jcc_license_cisuz.jar"
+            jarList="C:\Program Files\IBM\SQLLIB\java\db2jcc.jar;C:\Program Files\IBM\SQLLIB\java\db2jcc_license_cisuz.jar"
             name="%org.eclipse.datatools.enablement.ibm.db2.iseries.driverTemplate"
             parentCategory="org.eclipse.datatools.enablement.ibm.db2.iseries.driverCategory">
          <properties>
