--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw/plugin.xml
@@ -35,7 +35,7 @@
             createDefault="false"
             emptyJarListIsOK="false"
             id="org.eclipse.datatools.enablement.ibm.db2.luw.driverTemplate"
-            jarList="C:\Program Files\IBM\SQLLIB\java\db2jcc.jar,C:\Program Files\IBM\SQLLIB\java\db2jcc_license_cisuz.jar"
+            jarList="C:\Program Files\IBM\SQLLIB\java\db2jcc.jar;C:\Program Files\IBM\SQLLIB\java\db2jcc_license_cisuz.jar"
             name="%org.eclipse.datatools.enablement.ibm.db2.luw.driverTemplate"
             parentCategory="org.eclipse.datatools.enablement.ibm.db2.driverCategory">
          <properties>
