--- a/plugins/connectivity/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC.nl/build.xml
+++ b/plugins/connectivity/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC.nl/build.xml
@@ -81,10 +81,10 @@
 	
 	<target name="nl-jar">
 		<jar destfile="${jar.name}" manifest="./META-INF/MANIFEST.MF">
-		<zipfileset dir="${dir.src}"  includes="**/*.properties"/>
-		   <fileset dir="." includes="plugin_??_??.properties"/>
+		<zipfileset dir="." includes="plugin_??_??.properties"/>
 		</jar>
 	</target>
+
 	
 	<target name="Jar" depends="NativeToAscii, nl-jar" >
 	</target>
