--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -18,6 +18,7 @@ LABEL_SERVICE_EXTENSION_POINT_NAME=labelService
 ELEMENT_ID_EXTENSION_POINT_NAME=elementID
 MARKER_NAVIGATION_PROVIDER_EXTENSION_POINT_NAME=markerNavigationProvider
 DATA_SOURCE_EXPLORER_SORTER=sorterValidatorProvider
+FILTER_INFORMATION_EXTENSION_POINT_NAME=filterInformation
 
 #
 ## Model Explorer Selection
@@ -112,6 +113,7 @@ datatools.core.ui.modelexplorer.modelExplorerColumnDecoration = Data Tools - Col
 datatools.core.ui.modelexplorer.modelExplorerForeignKeyDecoration = Data Tools - Foreign or Primary Key Indicator
 datatools.core.ui.modelexplorer.DependencyDecoration = Data Tools - Dependency Decoration
 datatools.core.ui.modelexplorer.bookmarkDecoration  = Data Tools - Bookmark Indicator
+datatools.core.ui.modelexplorer.filterDecoration = Data Tools - Server Explorer Filter Node Indicator
 
 #
 ## Model Explorer Sorter Provider
