--- a/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
@@ -32,3 +32,7 @@ default.node.name = Default Folder
 rule.node.name = Rule Folder
 proxytable.node.name = Proxy Table Folder
 webservicetable.node.name = Web Services as Tables Folder
+
+pluginName = Sybase UI Plug-in
+providerName = Eclipse.org
+
