--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -175,3 +175,4 @@ OtherDriverUIContributor.errormessage.requiresdatabase = Enter a database name.
 OtherDriverUIContributor.errormessage.requiresurl = Enter a URL.
 OtherDriverUIContributor.errormessage.requiresusername = Enter a user name.
 
+ConnectAction.title = Properties for {0}
