NEW - bug 231556: Error message is displayed in dialog of disconnection https://bugs.eclipse.org/bugs/show_bug.cgi?id=231556

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -22,8 +22,8 @@ DisconnectJob.status.error=Could not disconnect from {0}.
 CreateConnectionJob.name=Creating {0} connection to {1}.
 CreateConnectionJob.error=Error creating {0} connection to {1}. (Error\: {2})
 OpenConnectionEventJob.name=Processing open connection event for {0}.
-CloseManagedConnectionJob.name=Closing {0} connection to {1}. (Error\: {2})
-CloseManagedConnectionJob.error=Error closing {0} connection to {1}.
+CloseManagedConnectionJob.name=Closing {0} connection to {1}.
+CloseManagedConnectionJob.error=Error closing {0} connection to {1}. (Error\: {2})
 CloseConnectionEventJob.name=Processing close connection event for {0}.
 assert.invalid.profile = Parsing error\: invalid attribute ({0})
 assert.invalid.profile.duplicateFactory = Parsing error\: duplicate factory id with duplicate priority ({0})
