Removed dependency on emf search incubator project; added extension and default for IOCLSyntaxViewer contribution; filled-in version information for EMF plug-ins.

--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
@@ -5,4 +5,8 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                about.html
-src.includes = about.html
+src.includes = about.html,\
+               META-INF/,\
+               plugin.properties,\
+               plugin.xml,\
+               src/
