--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
@@ -5,5 +5,12 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                icons/,\
-               about.html
-src.includes = about.html
+               about.html,\
+               schema/
+src.includes = about.html,\
+               schema/,\
+               src/,\
+               icons/,\
+               plugin.properties,\
+               plugin.xml,\
+               META-INF/
