--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="org.eclipse.datatools.enablement.oda.ecore.ui.OCLSyntaxViewer" name="OCLSyntaxViewer" schema="schema/org.eclipse.datatools.enablement.oda.ecore.ui.OCLSyntaxViewer.exsd"/>
 
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
@@ -60,6 +61,12 @@
                wizardPageClass="org.eclipse.datatools.enablement.oda.ecore.ui.impl.DataSetColumnsWizardPage">
          </dataSetPage>
       </dataSetUI>
+   </extension>
+   <extension
+         point="org.eclipse.datatools.enablement.oda.ecore.ui.OCLSyntaxViewer">
+      <oclSourceViewer
+            class="org.eclipse.datatools.enablement.oda.ecore.ui.sourceviewer.DefaultSourceViewer">
+      </oclSourceViewer>
    </extension>
 
 </plugin>
