NEW - bug 231818: New Connection Profile incremental search is case sensitive and not substringed https://bugs.eclipse.org/bugs/show_bug.cgi?id=231818 bug 231823 and bug 231819 also

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -35,6 +35,7 @@ CPWizardSelectionPage.title = Connection Profile
 CPWizardSelectionPage.desc = Select a connection profile type.
 CPWizardSelectionPage.group = &Connection Profile Types:
 CPWizardSelectionPage.defaultName =New {0}
+CPWizardSelectionPage.defaultNameExtended =New {0}({1})
 actions.connect.job = Connect server job
 actions.connect.uijob = Refreshing View
 actions.ping.job = Ping server job
