CheckIn:Expose ws driver property wsdlURL so that it is editable in property editor.

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
@@ -27,3 +27,4 @@ datasource.property.connectionClass=Connection &Class
 datasource.property.connectionTimeOut=Connection &Time Out
 dataset.property.xmlFileURI=&XML File
 dataset.property.xsdFileURI=&Schema File
+datasource.property.wsdlUrl=&WSDL URL
