BZ232362 - fixing issue with DSE tooltip

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -102,6 +102,7 @@ CommonLabelProviderBase.label.localRepository=Workspace Repository (Local)
 
 properties.connectionprofile.type = Profile Type
 DSE.Refresh.label = Ref&resh
+DSE.View.Tooltip = Data Source Explorer
 
 CPDeleteChange.name = Delete {0} Connection Profile
 CPDeleteChange.error.ProfileDoesNotExist = The connection profile you are trying to delete does not exist.
