NEW - bug 233452: TVT34:TCT491: TVT FR - Sybase ASA & Sybase ASE do not have a text under Connection Profile https://bugs.eclipse.org/bugs/show_bug.cgi?id=233452

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
@@ -5,6 +5,7 @@ profile.asa.properties = Sybase ASA Connection Properties
 9.xVersionString = 9.x
 10.xVersionString = 10.x
 
+ASA_CONNECTION_PROFILE_WIZARD_DESCRIPTION = Create a Sybase ASA connection profile.
 
 wizard.asa.multi.action = Create Multiple ASA Profiles
 profile.asa.content = Sybase ASA SQL Model Content Extension
