--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
@@ -3,6 +3,8 @@ profile.ase.wizard.title = Sybase ASE
 jdbc.connection.name = JDBC Connection
 profile.ase.properties = Sybase ASE Connection Properties
 
+ASE_CONNECTION_PROFILE_WIZARD_DESCRIPTION = Create a Sybase ASE connection profile.
+
 database.name=Database
 profile.ase.content = Sybase ASE SQL Model Content Extension
 
