--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
@@ -18,6 +18,7 @@
             profile="org.eclipse.datatools.enablement.sybase.asa.connectionProfile"/>
       <newWizard
             class="org.eclipse.datatools.enablement.sybase.asa.internal.ui.connection.NewASAConnectionProfileWizard"
+            description="%ASA_CONNECTION_PROFILE_WIZARD_DESCRIPTION"
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.enablement.sybase.asa.NewConnectionProfileWizard"
             name="%profile.asa.wizard.title"
