NEW - bug 233584: TVT34:TCT493: TVT FR - true and false under column 'Value' https://bugs.eclipse.org/bugs/show_bug.cgi?id=233584

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -178,3 +178,6 @@ OtherDriverUIContributor.errormessage.requiresurl = Enter a URL.
 OtherDriverUIContributor.errormessage.requiresusername = Enter a user name.
 
 ConnectAction.title = Properties for {0}
+
+Boolean.true = true
+Boolean.false = false
