--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.dbdefinition/build.properties
@@ -1,12 +1,12 @@
 ###############################################################################
-# Copyright (c) 2001, 2004 IBM Corporation and others.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
+# Copyright (c) 2008 Sybase, Inc.
+# 
+# All rights reserved. This program and the accompanying materials are made
+# available under the terms of the Eclipse Public License v1.0 which
+# accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 # 
-# Contributors:
-#     IBM Corporation - initial API and implementation
+# Contributors: Sybase - initial API and implementation
 ###############################################################################
 bin.includes = plugin.xml,\
                runtime/,\
